# Echekinator

./: .gitignore  Harry.txt  README.md  config.json  dune-project
Résultats/: PF2, RQ contre PF2, N.E 1000 parties - 2025.02.13 - 01:37:06.txt  PF4 contre PF4 10 parties - 2025.01.29 18:28:58.txt  PF4 contre PF4 10 parties - 2025.01.30 00:16:52.txt  PF4 contre PF4 10 parties - 2025.01.30 15:42:05.txt  PF4 contre PF4 10 parties - 2025.02.01 22:52:49.txt  PF4 contre PF4 10 parties - 2025.02.01 22:53:27.txt  PF4 contre PF4 10 parties - 2025.02.01 22:54:27.txt  PF4 contre PF4 10 parties - 2025.02.01 22:54:53.txt  PF4 contre PF4 10 parties - 2025.02.01 22:55:23.txt  PF4 contre PF4 10 parties - 2025.02.01 22:55:53.txt  PF4 contre PF4 10 parties - 2025.02.01 22:56:20.txt  PF4 contre PF4 10 parties - 2025.02.02 22:33:36.txt  PF4 contre PF4 10 parties - 2025.02.03 18:17:54.txt  PF4 contre PF4 10 parties - 2025.02.09 - 04:13:54.txt  PF4 contre PF4 10 parties - 2025.02.12 - 01:36:42.txt  PF4 contre PF4 10 parties - 2025.02.14 - 02:28:43.txt  PF4 contre PF4 10 parties - 2025.02.14 - 14:41:34.txt  PF4 contre PF4, RQ 100 parties - 2025.02.12 - 02:19:27.txt  PF4, ARS contre PF4, ARS 10 parties - 2025.01.28 19:03:58.txt  (+18 more)
_build/: .db  log  (+1 more)
tests/: algo.ml  bitboards.ml  brouillon  brouillon.ml  captures.ml  clouage.ml  config.ml  dune  evaluations.ml  magics.ml  nnue.ml  oldevaluations.ml  ouvertures.ml  ouvertures_test.ml  perft.ml  perftcapture.ml  perftefficace.ml  positions.ml  pv.ml  quiescence.ml  reduction.ml  see.ml  strategie2.ml  to_algebraic.ml  trad.ml  tri.ml  zobrist.ml
(+255 files in other folders)
