(tests
 (names 
 ouvertures_test
 reduction
 algo
 tri
 clouage
 pv
 perft
 perftcapture
 perftefficace
 captures
 evaluations
 quiescence
 zobrist
 see
 brouillon
 trad)
 (modules
 ouvertures_test
 reduction
 algo
 tri
 clouage
 pv
 perft
 perftcapture
 perftefficace
 captures
 evaluations
 quiescence
 zobrist
 see
 brouillon
 config
 positions
 trad
 ouvertures
 strategie2)
 (libraries 
 unix
 threads
 libs))