(tests
 (names 
 ouvertures_test
 reduction
 algo
 tri
 clouage
 pv
 perft
 perftcapture
 perftefficace
 captures
 evaluations
 quiescence
 zobrist
 see
 brouillon
 trad
 nnue)
 (modules
 ouvertures_test
 reduction
 algo
 tri
 clouage
 pv
 perft
 perftcapture
 perftefficace
 captures
 evaluations
 quiescence
 zobrist
 see
 brouillon
 config
 positions
 trad
 ouvertures
 strategie2
 to_algebraic
 oldevaluations
 bitboards
 nnue)
 (libraries 
 unix
 threads
 libs))